--- a/HTML/menuen.html
+++ b/HTML/menuen.html
@@ -51,7 +51,7 @@
   </div>
 
   </body>
-  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-  <script src="../JS/menuburger.js"></script> <!-- SCRIPT POUR LA CROIX -->
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script> <!-- SCRIPT 1 -->
+  <script src="../JS/menuburger.js"></script> <!-- SCRIPT POUR LA CROIX --> <!-- SCRIPT 2 -->
   <script type="text/javascript" src="classe.js"></script> <!-- SCRIPT TEST DES CLASSES, PAS UTILE POUR LE MENU -->
 </html>
